--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link
+      rel="icon"
+      href="https://img.icons8.com/doodle/48/000000/s-symbol.png"
+      type="image/png"
+    />
     <title>Sanket Manmode</title>
   </head>
   <body>
